tests/machine/x/ocaml/string_prefix_slice.error
stage: compile
error:
File "/workspace/mochi/tests/machine/x/ocaml/string_prefix_slice.ml", line 6, characters 2-15:
6 |   print_endline (List.nth s1 0 = prefix)
      ^^^^^^^^^^^^^
Error: This function has type string -> unit
       It is applied to too many arguments; maybe you forgot a `;'.


Context (around line 6):
   4 | 
   5 | let () =
   6 |   print_endline (List.nth s1 0 = prefix)
   7 |   print_endline (List.nth s2 0 = prefix)
   8 | 
