tests/machine/x/ocaml/string_prefix_slice.ml
let prefix = "fore"
let s1 = "forest"
let s2 = "desert"

let () =
  print_endline (List.nth s1 0 = prefix)
  print_endline (List.nth s2 0 = prefix)
